fix display of CTA button on mobile

--- a/app/assets/stylesheets/sumofus/components/footer.scss
+++ b/app/assets/stylesheets/sumofus/components/footer.scss
@@ -8,6 +8,11 @@
   border-top: 2px solid $dingy-gray;
   @include box-sizing(border-box);
 
+  @media(max-width: $mobile-width) {
+    // the action button covers it anyway
+    display: none;
+  }
+
   &--stuck-to-bottom {
     position: absolute;
     bottom: 0;
